--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '3.7'
+version: '3'
 
 services: 
 
     app:
-        build: .
+        build: .docker/app
         depends_on: 
             - nginx
             - mysql
