--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -1,10 +1,8 @@
 FROM php:7.3.6-fpm-alpine3.9
-RUN apk add --no-cache bash mysql-client openssl
+RUN apk add --no-cache bash mysql-client openssl nodejs npm
 RUN docker-php-ext-install pdo pdo_mysql
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
-RUN apk add 
 
 ENV DOCKERIZE_VERSION v0.6.1
 RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
@@ -13,8 +11,9 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
 
 WORKDIR /var/www
 RUN rm -rf /var/www/html
-
 RUN ln -s public html
+
+RUN mkdir /opt/docker
 
 EXPOSE 9000
 ENTRYPOINT [ "php-fpm" ]
