--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,24 +1,25 @@
 steps:
-    id: "Executar o docker-compose"
-    name: "gcr.io/Project_ID/docker-compose"
-    args: ['-f', 'docker-compose.cloudbuild.yaml', 'up', '-d']
 
-    id: "Executar o composer"
-    name: "gcr.io/cloud-builders/docker"
-    args: ['exec', '-t', 'app', 'composer', 'install']
+- id: "Executar o docker-compose"
+  name: "gcr.io/Project_ID/docker-compose"
+  args: ['-f', 'docker-compose.cloudbuild.yaml', 'up', '-d']
 
-    id: "Copiar o arquivo .env.example para .env"
-    name: "gcr.io/cloud-builders/docker"
-    args: ['exec', '-t', 'app', 'cp', 'env.example', '.env']
+- id: "Executar o composer"
+  name: "gcr.io/cloud-builders/docker"
+  args: ['exec', '-t', 'app', 'composer', 'install']
 
-    id: "Rodar um artisan key:generate"
-    name: "gcr.io/cloud-builders/docker"
-    args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'key:generate']
+- id: "Copiar o arquivo .env.example para .env"
+  name: "gcr.io/cloud-builders/docker"
+  args: ['exec', '-t', 'app', 'cp', 'env.example', '.env']
 
-    id: "Executar as migrações"
-    name: "gcr.io/cloud-builders/docker"
-    args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'migrate']
+- id: "Rodar um artisan key:generate"
+  name: "gcr.io/cloud-builders/docker"
+  args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'key:generate']
 
-    id: "Executar os testes utilizando o PHPUnit"
-    name: "gcr.io/cloud-builders/docker"
-    args: ['exec', '-t', 'app', 'php', '/var/www/vendor/bin/phpunit', '-c', '/var/www/phpunit.xml']
+- id: "Executar as migrações"
+  name: "gcr.io/cloud-builders/docker"
+  args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'migrate']
+
+- id: "Executar os testes utilizando o PHPUnit"
+  name: "gcr.io/cloud-builders/docker"
+  args: ['exec', '-t', 'app', 'php', '/var/www/vendor/bin/phpunit', '-c', '/var/www/phpunit.xml']
