--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 
 - id: "Executar o docker-compose"
-  name: "gcr.io/Project_ID/docker-compose"
+  name: "gcr.io/$Project_ID/docker-compose"
   args: ['-f', 'docker-compose.cloudbuild.yaml', 'up', '-d']
 
 - id: "Executar o composer"
