--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ steps:
 
 - id: "Executar o docker-compose"
   name: "gcr.io/$PROJECT_ID/docker-compose:1.24.0"
-  args: ['-f', 'docker-compose.cloudbuild.yaml', 'up', '-d']
+  args: ['-f', 'docker-compose.cloudbuild.yml', 'up', '-d']
 
 - id: "Executar o composer"
   name: "gcr.io/cloud-builders/docker"
