--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,7 +10,7 @@ steps:
 
 - id: "Copiar o arquivo .env.example para .env"
   name: "gcr.io/cloud-builders/docker"
-  args: ['exec', '-t', 'app', 'cp', 'env.example', '.env']
+  args: ['exec', '-t', 'app', 'cp', '/opt/docker/.env', '.env']
 
 - id: "Rodar um artisan key:generate"
   name: "gcr.io/cloud-builders/docker"
