--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -1,11 +1,17 @@
+# steps:
+# - name: 'gcr.io/cloud-builders/go'
+#   args: ['install', '.']
+#   env: ['PROJECT_ROOT=sum']
+# - name: 'gcr.io/cloud-builders/go'
+#   args: ['build', 'sum']
+#   env: ['PROJECT_ROOT=sum']
+# artifacts:
+#   objects:
+#     location: 'gs://code_education/'
+#     paths: ['sum']
 steps:
-- name: 'gcr.io/cloud-builders/go'
-  args: ['install', '.']
-  env: ['PROJECT_ROOT=sum']
-- name: 'gcr.io/cloud-builders/go'
-  args: ['build', 'sum']
-  env: ['PROJECT_ROOT=sum']
-artifacts:
-  objects:
-    location: 'gs://code_education/'
-    paths: ['sum']
+- name: 'golang'
+  args: ['go', 'build', '.']
+  env: ['GO111MODULE=on']
+- name: 'busybox'
+  args: ['./module']
