--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -1,17 +1,10 @@
-# steps:
-# - name: 'gcr.io/cloud-builders/go'
-#   args: ['install', '.']
-#   env: ['PROJECT_ROOT=sum']
-# - name: 'gcr.io/cloud-builders/go'
-#   args: ['build', 'sum']
-#   env: ['PROJECT_ROOT=sum']
-# artifacts:
-#   objects:
-#     location: 'gs://code_education/'
-#     paths: ['sum']
 steps:
-- name: 'golang'
-  args: ['go', 'build', '.']
- # env: ['GO111MODULE=on']
-- name: 'busybox'
-  args: ['./main']
+- name: 'gcr.io/cloud-builders/go'
+  args: ['install', '.']
+  env: ['PROJECT_ROOT=sum']
+- name: 'gcr.io/cloud-builders/go'
+  args: ['test', 'sum']
+  env: ['PROJECT_ROOT=sum']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '--tag=gcr.io/$PROJECT_ID/sum', '.']
+images: ['gcr.io/$PROJECT_ID/sum']
