--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
 - name: 'gcr.io/cloud-builders/go'
   args: ['install', '.']
-  env: ['PROJECT_ROOT=sum']
+  env: ['PROJECT_ROOT=soma']
 - name: 'gcr.io/cloud-builders/go'
-  args: ['test', 'sum']
-  env: ['PROJECT_ROOT=sum']
+  args: ['test', 'soma']
+  env: ['PROJECT_ROOT=soma']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '--tag=gcr.io/$PROJECT_ID/sum', '.']
-images: ['gcr.io/$PROJECT_ID/sum']
+  args: ['build', '--tag=gcr.io/$PROJECT_ID/soma', '.']
+images: ['gcr.io/$PROJECT_ID/soma']
