--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
 - name: 'gcr.io/cloud-builders/go'
   args: ['install', '.']
-  env: ['PROJECT_ROOT=soma']
+  env: ['PROJECT_ROOT=soma', 'GOPATH=/src']
 - name: 'gcr.io/cloud-builders/go'
   args: ['test', 'soma']
-  env: ['PROJECT_ROOT=soma']
+  env: ['PROJECT_ROOT=soma', 'GOPATH=/src']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '--tag=gcr.io/$PROJECT_ID/soma', '.']
 images: ['gcr.io/$PROJECT_ID/soma']
