--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -2,6 +2,10 @@ steps:
 - name: 'gcr.io/cloud-builders/go'
   args: ['install', '.']
   env: ['PROJECT_ROOT=soma', 'GOPATH=/src']
+  volumes:
+  - name: 'go'
+    path: '/src'
+
 - name: 'gcr.io/cloud-builders/go'
   args: ['test', 'soma']
   env: ['PROJECT_ROOT=soma', 'GOPATH=/src']
