--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -2,14 +2,14 @@ steps:
 
 - name: 'gcr.io/cloud-builders/go'
   args: ['get', '-d', './...']
-  env: ['GOPATH=/src']
+  env: ['GOPATH=/gopath']
   volumes:
   - name: 'go'
-    path: '/src'
+    path: '/gopath'
 
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['app', 'deploy']
-  env: ['GOPATH=/src']
+  env: ['GOPATH=/gopath']
   volumes:
   - name: 'go'
-    path: '/src'
+    path: '/gopath'
