--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 
 - name: 'gcr.io/cloud-builders/go'
-  args: ['get', '-d', './...']
+  args: ['get', '-d', './src/']
   env: ['GOPATH=/gopath']
   volumes:
   - name: 'go'
