--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,23 @@
+############################
+# STEP 1 build executable binary
+############################
+FROM golang:alpine AS builder
+# Install git.
+# Git is required for fetching the dependencies.
+RUN apk update && apk add --no-cache git
+WORKDIR $GOPATH/src/mypackage/myapp/
+COPY . .
+# Fetch dependencies.
+# Using go get.
+RUN go get -d -v
+# Build the binary.
+#RUN go build -o /go/bin/soma
+RUN GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o /go/bin/soma
+############################
+# STEP 2 build a small image
+############################
 FROM scratch
-
-COPY gopath/bin/soma /soma
-
-ENTRYPOINT ["/soma"]
+# Copy our static executable.
+COPY --from=builder /go/bin/soma /go/bin/soma
+# Run the hello binary.
+ENTRYPOINT ["/go/bin/soma"]
