Item 3.3 concluido - correcao do teste

--- a/Desafio_GO/cloudbuild.yaml
+++ b/Desafio_GO/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
   - id: "Rodando testes"
     name: "gcr.io/cloud-builders/go"
-    args: ["test", "Desafio_GO/main_test.go"]
+    args: ["test", "main_test.go"]
     env: ["GOPATH=."]
     dir: "./src"
