--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,22 +7,23 @@ services:
         depends_on: 
             - mysql
             - redis
-        container_name: app
+        container_name: Catalog-app
         volumes: 
             - ./Data/laravel:/var/www
             - .docker/app:/opt/docker
         networks: 
             - app-network
-        entrypoint: dockerize -template /opt/docker/.env:.env --wait tcp://mysql:3306 -timeout 40s /opt/docker/entrypoint.sh
+        entrypoint: 
+            dockerize -template /opt/docker/.env:.env --wait tcp://mysql:3306 -timeout 40s /opt/docker/entrypoint.sh
         
         environment: 
-            - DB_HOST=mysql
-            - DB_DATABASE=laravel
+            - DB_HOST=Catalog-mysql
+            - DB_DATABASE=catalog
             - DB_USERNAME=root
             - DB_PASSWORD=root
     nginx:
         build: .docker/nginx
-        container_name: nginx
+        container_name: Catalog-nginx
         restart: always
         tty: true
         ports: 
@@ -37,11 +38,12 @@ services:
         entrypoint: dockerize -template /opt/docker/nginx.conf:/etc/nginx/conf.d/default.conf nginx -g 'daemon off;'
 
         environment: 
-            - PHP_FPM_HOST=app
+            - PHP_FPM_HOST=Catalog-app
             - PHP_FPM_PORT=9000
 
     redis:
         image: redis:alpine
+        container_name: Catalog-redis
         expose: 
             - 6379
         networks: 
@@ -50,7 +52,7 @@ services:
     mysql:
         image: mysql:5.7
         command: --innodb-use-native-aio=0
-        container_name: mysql
+        container_name: Catalog-mysql
         restart: always
         tty: true
         ports: 
@@ -58,7 +60,7 @@ services:
         networks: 
             - app-network
         environment: 
-            - MYSQL_DATABASE=laravel
+            - MYSQL_DATABASE="catalog"
             - MYSQL_ROOT_PASSWORD=root
             - MYSQL_USER=root
         volumes: 
