--- a/.docker/app/.env.testing
+++ b/.docker/app/.env.testing
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:Gti4rsA2b7zkl09VSD7ayY5bZ0zd0a7/4by9zWzF0mw=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST={{.Env._DB_HOST}}
 DB_PORT=3306
-DB_DATABASE={{.Env._DB_DATABASE}}
+DB_DATABASE={{.Env._DB_DATABASE_TEST}}
 DB_USERNAME={{.Env._DB_USERNAME}}
 DB_PASSWORD={{.Env._DB_PASSWORD}}
 
