--- a/docker-compose.cloudbuild.yaml
+++ b/docker-compose.cloudbuild.yaml
@@ -13,8 +13,8 @@ services:
             - .docker/app:/opt/docker
         networks: 
             - app-network
-        entrypoint: 
-            dockerize -template /opt/docker/.env:.env -template /opt/docker/.env.testing:.env.testing --wait tcp://mysql:3306 -timeout 40s /opt/docker/entrypoint.sh
+        #entrypoint: 
+        #    dockerize -template /opt/docker/.env:.env -template /opt/docker/.env.testing:.env.testing --wait tcp://mysql:3306 -timeout 40s /opt/docker/entrypoint.sh
         environment: 
             - _DB_HOST=Catalog-mysql
             - _DB_DATABASE=catalog_prod
@@ -39,7 +39,7 @@ services:
         entrypoint: 
             dockerize -template /opt/docker/nginx.conf:/etc/nginx/conf.d/default.conf nginx -g 'daemon off;'
         environment: 
-            - PHP_FPM_HOST=Catalog-app
+            - PHP_FPM_HOST=app
             - PHP_FPM_PORT=9000
 
     redis:
