--- a/.docker/nginx/Dockerfile
+++ b/.docker/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx:1.15.0-alpine
 
 RUN mkdir /opt
 RUN mkdir /opt/docker
-RUN usermod -u 1000 www-data
+#RUN usermod -u 1000 www-data
 
 ENV DOCKERIZE_VERSION v0.6.1
 RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
