--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,20 +6,20 @@ steps:
 
 - id: "Executar o composer"
   name: "gcr.io/cloud-builders/docker"
-  args: ['exec', '-t', 'app', 'composer', 'install']
+  args: ['exec', '-t', 'Catalog-app', 'composer', 'install']
 
 - id: "Copiar o arquivo .env.example para .env"
   name: "gcr.io/cloud-builders/docker"
-  args: ['exec', '-t', 'app', 'cp', '/opt/docker/.env', '.env']
+  args: ['exec', '-t', 'Catalog-app', 'cp', '/opt/docker/.env', '.env']
 
 - id: "Rodar um artisan key:generate"
   name: "gcr.io/cloud-builders/docker"
-  args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'key:generate']
+  args: ['exec', '-t', 'Catalog-app', 'php', '/var/www/artisan', 'key:generate']
 
 - id: "Executar as migrações"
   name: "gcr.io/cloud-builders/docker"
-  args: ['exec', '-t', 'app', 'php', '/var/www/artisan', 'migrate']
+  args: ['exec', '-t', 'Catalog-app', 'php', '/var/www/artisan', 'migrate']
 
 - id: "Executar os testes utilizando o PHPUnit"
   name: "gcr.io/cloud-builders/docker"
-  args: ['exec', '-t', 'app', 'php', '/var/www/vendor/bin/phpunit', '-c', '/var/www/phpunit.xml']
+  args: ['exec', '-t', 'Catalog-app', 'php', '/var/www/vendor/bin/phpunit', '-c', '/var/www/phpunit.xml']
