--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -1,6 +1,10 @@
 FROM php:7.3.6-fpm-alpine3.9
 RUN apk add --no-cache bash mysql-client openssl nodejs npm
+RUN apk add -u $PHPIZE_DEPS
+
 RUN docker-php-ext-install pdo pdo_mysql
+
+RUN pecl install xdebug && docker-php-ext-enable xdebug
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
@@ -15,6 +19,13 @@ RUN ln -s public html
 #RUN usermod -u 1000 www-data
 RUN mkdir /opt/docker
 
+RUN echo "xdebug.remote_autostart=1" | tee -a /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini > /dev/null && \
+    echo "xdebug.remote_enable=1" | tee -a /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini > /dev/null && \
+    echo "xdebug.remote_port=9001" | tee -a /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini > /dev/null && \
+    echo "xdebug.remote_host=host.docker.internal" | tee -a /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini > /dev/null
+
+
 EXPOSE 9000
+EXPOSE 9001
 ENTRYPOINT [ "php-fpm" ]
 
