--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,3 +70,7 @@ services:
 networks:
     app-network:
         driver: bridge
+        ipam:
+            driver: default
+            config:
+                - subnet: 172.172.0.0/16
