Add GD on App Docker

--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -1,8 +1,19 @@
 FROM php:7.3.6-fpm-alpine3.9
-RUN apk add --no-cache bash mysql-client openssl nodejs npm
+RUN apk add --no-cache  bash \
+                        mysql-client \
+                        openssl \
+                        nodejs \
+                        npm \
+                        freetype-dev \
+                        libjpeg-turbo-dev \
+                        libpng-dev
+
 RUN apk add -u $PHPIZE_DEPS
 
 RUN docker-php-ext-install pdo pdo_mysql
+
+RUN docker-php-ext-configure gd --with-gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
+RUN docker-php-ext-install -j$(nproc) gd
 
 RUN pecl install xdebug && docker-php-ext-enable xdebug
 
