--- a/.docker/app/.env.testing
+++ b/.docker/app/.env.testing
@@ -18,7 +18,7 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-FILESYSTEM_DRIVER=gcs
+FILESYSTEM_DRIVER=local
 
 REDIS_HOST=redis
 REDIS_PASSWORD=null
