Primeira versao listagem

--- a/.docker/app/.env
+++ b/.docker/app/.env
@@ -47,3 +47,5 @@ GOOGLE_CLOUD_PROJECT_ID=codeeducation-265323
 GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
 GOOGLE_CLOUD_STORAGE_BUCKET=curso-code-educatio
 GOOGLE_CLOUD_STORAGE_API_URI=https://storage.cloud.google.com/curso-code-educatio
+
+CORS_ORIGINS=http://localhost:3000
