--- a/Data/frontend/package.json
+++ b/Data/frontend/package.json
@@ -9,11 +9,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/mui-datatables": "^2.13.7",
     "@types/node": "^12.12.35",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.4",
     "@types/route-parser": "^0.1.3",
+    "axios": "^0.19.2",
+    "date-fns": "^2.12.0",
+    "mui-datatables": "^2.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
