--- a/Data/frontend/package.json
+++ b/Data/frontend/package.json
@@ -15,16 +15,19 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.4",
     "@types/route-parser": "^0.1.3",
+    "@types/yup": "^0.28.0",
     "axios": "^0.19.2",
     "date-fns": "^2.12.0",
     "mui-datatables": "^2.14.0",
+    "notistack": "^0.9.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.4.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "route-parser": "0.0.5",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "yup": "^0.28.4"
   },
   "scripts": {
     "start": "react-scripts start",
