--- a/Data/backend/laravel/composer.json
+++ b/Data/backend/laravel/composer.json
@@ -9,8 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "barryvdh/laravel-cors": "^1.0",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^2.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "superbalist/laravel-google-cloud-storage": "^2.2"
