--- a/Data/backend/laravel/composer.json
+++ b/Data/backend/laravel/composer.json
@@ -12,8 +12,10 @@
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
         "laravel/framework": "^6.2",
+        "laravel/helpers": "^1.2",
         "laravel/tinker": "^1.0",
-        "superbalist/laravel-google-cloud-storage": "^2.2"
+        "superbalist/laravel-google-cloud-storage": "^2.2",
+        "tucker-eric/eloquentfilter": "^2.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
