--- a/Data/frontend/package.json
+++ b/Data/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.157",
     "@types/mui-datatables": "^2.13.7",
     "@types/node": "^12.12.35",
     "@types/react": "^16.9.34",
@@ -18,6 +19,7 @@
     "@types/yup": "^0.28.0",
     "axios": "^0.19.2",
     "date-fns": "^2.12.0",
+    "lodash": "^4.17.15",
     "mui-datatables": "^2.14.0",
     "notistack": "^0.9.11",
     "react": "^16.13.1",
