--- a/Data/frontend/package.json
+++ b/Data/frontend/package.json
@@ -27,6 +27,8 @@
     "react-hook-form": "^5.4.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "reduxsauce": "^1.1.3",
     "route-parser": "0.0.5",
     "typescript": "^3.7.5",
     "yup": "^0.28.4"
