--- a/Data/frontend/package.json
+++ b/Data/frontend/package.json
@@ -31,6 +31,7 @@
     "reduxsauce": "^1.1.3",
     "route-parser": "0.0.5",
     "typescript": "^3.7.5",
+    "use-debounce": "^3.4.3",
     "yup": "^0.28.4"
   },
   "scripts": {
