Correção sistema de pesquisa

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
             - app-network
     
     mysql:
-        image: mysql:5.7
+        build: .docker/mysql
         command: --innodb-use-native-aio=0
         container_name: Catalog-mysql
         restart: always
