--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "request": "launch",
       "port": 9000,
       "pathMappings": {
-        "/var/www": "${workspaceRoot}/Data/laravel"
+        "/var/www": "${workspaceRoot}/Data/backend"
       }
     }
   ]
