--- a/Data/frontend/tsconfig.json
+++ b/Data/frontend/tsconfig.json
@@ -17,8 +17,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "jsx": "react"
   },
   "include": [
     "src"
