--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "intelephense.completion.fullyQualifyGlobalConstantsAndFunctions": true,
   "intelephense.diagnostics.deprecated": false,
-  "intelephense.maxMemory": 512
+  "intelephense.maxMemory": 512,
+  "cSpell.words": [
+    "datatables",
+    "esnext",
+    "testid"
+  ]
 }
