--- a/Data/frontend/tsconfig.json
+++ b/Data/frontend/tsconfig.json
@@ -16,8 +16,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noImplicitAny": false,
     "noEmit": true,
-    //"noImplicitAny": false,
     "jsx": "react"
   },
   "include": [
