Iniciando CRUD de video - error items.filter is not a function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "intelephense.diagnostics.deprecated": false,
   "intelephense.maxMemory": 512,
   "cSpell.words": [
+    "Noistack",
     "datatables",
     "esnext",
     "freesolo",
