--- a/Data/frontend/package.json
+++ b/Data/frontend/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.15",
     "mui-datatables": "^2.14.0",
     "notistack": "^0.9.11",
+    "object-to-formdata": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.4.2",
