--- a/Data/frontend/package.json
+++ b/Data/frontend/package.json
@@ -15,11 +15,13 @@
     "@types/node": "^12.12.35",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.4",
     "@types/route-parser": "^0.1.3",
     "@types/yup": "^0.28.0",
     "axios": "^0.19.2",
     "date-fns": "^2.12.0",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.15",
     "mui-datatables": "^2.14.0",
     "notistack": "^0.9.11",
@@ -27,9 +29,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.4.2",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "reduxsauce": "^1.1.3",
     "route-parser": "0.0.5",
     "typescript": "^3.7.5",
