--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,13 @@
   "intelephense.maxMemory": 512,
   "cSpell.words": [
     "Noistack",
+    "appbar",
+    "castmember",
     "datatables",
     "esnext",
     "formdata",
     "freesolo",
+    "mimetypes",
     "multiselect",
     "testid"
   ]
