--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     index index.php index.html;
     root /var/www/backend/public;
 
-    client_max_body_size 51g;
+    client_max_body_size 51G;
     client_body_buffer_size 512k;
     client_body_in_file_only clean;
 
